--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 env:
   NODE_ENV: production
   APP_NAME: FreeText
@@ -40,7 +43,7 @@ jobs:
         uses: BogDAAAMN/deta-deploy-action@v1.0.1
         with:
           deta-access-token: ${{ secrets.DETA_ACCESS_TOKEN }}
-          deta-name: 'freetext'
+          deta-name: 'textbin'
           deta-project: 'default'
           deta-project-dir: '.'
 
